tests/agl/rejections/type/uninhabitable_enum.agl
enum E
  | Only(e: E)
